k8s/40-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worktracker-web
  namespace: worktracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worktracker-web
  template:
    metadata:
      labels:
        app: worktracker-web
    spec:
      containers:
        - name: web
          image: worktracker-web:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: worktracker-web
  namespace: worktracker
spec:
  selector:
    app: worktracker-web
  ports:
    - port: 80
      targetPort: 80
